Updated index.html to link last change
Forgot to stage root directory
Now resolved the commit

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/pancakes.html">Lemon-Ricotta Pancakes</a>
+        <p><a href="recipes/pancakes.html">Lemon-Ricotta Pancakes</a></p>
+        <p><a href="recipes/grilled-chicken.html">Honey Mustard Grill Chicken</a></p>
     </body>
 </html>
