--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="recipes/pancakes.html">Lemon-Ricotta Pancakes</a></p>
-        <p><a href="recipes/grilled-chicken.html">Honey Mustard Grill Chicken</a></p>
+        <ul>
+            <li><a href="recipes/pancakes.html">Lemon-Ricotta Pancakes</a></li>
+            <li><a href="recipes/grilled-chicken.html">Honey Mustard Grill Chicken</a></li>
+            <li><a href="recipes/strawberry-bruschetta.html">Strawberry Bruschetta</a></li>
+        </ul>
     </body>
 </html>
